# cookiecutter-pypackage

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  cookiecutter.json  mkdocs.yml  pyproject.toml  requirements.txt  tox.ini  versions.json
.devcontainer/: Dockerfile  devcontainer.json
.github/: CODEOWNERS  FUNDING.yml  SECURITY.md  label-commenter-config.yml  labels.yml  renovate.json  stale.yml
.github/ISSUE_TEMPLATE/: bug_report.yaml  config.yml  docs.yaml  feature_request.yaml
.github/workflows/: auto-approve.yml  auto-merge.yml  cd.yml  ci.yml  codecov.yml  codeql-analysis.yml  dependency_review.yml  fossa.yml  greetings.yml  instance.yml  label-commenter.yml  labels.yml  license.yml  misspell.yml  preview-docs.yml  stale.yml  sync.yml
0.0.1/: 404.html  index.html  sitemap.xml
0.0.1/CHANGELOG/: index.html
0.0.1/CODE_OF_CONDUCT/: index.html
0.0.1/CONTRIBUTING/: index.html
0.0.1/LICENSE/: index.html
0.0.1/search/: search_index.json
0.0.10/: 404.html  index.html  sitemap.xml
0.0.10/CHANGELOG/: index.html
0.0.10/CODE_OF_CONDUCT/: index.html
0.0.10/CONTRIBUTING/: index.html
0.0.10/LICENSE/: index.html
0.0.10/search/: search_index.json
0.0.2/: 404.html  index.html  sitemap.xml
0.0.2/CHANGELOG/: index.html
0.0.2/CODE_OF_CONDUCT/: index.html
0.0.2/CONTRIBUTING/: index.html
0.0.2/LICENSE/: index.html
0.0.2/search/: search_index.json
0.0.7/: 404.html  index.html  sitemap.xml
0.0.7/CHANGELOG/: index.html
0.0.7/CODE_OF_CONDUCT/: index.html
0.0.7/CONTRIBUTING/: index.html
0.0.7/LICENSE/: index.html
0.0.7/search/: search_index.json
0.0.9/: 404.html  index.html  sitemap.xml
0.0.9/CHANGELOG/: index.html
0.0.9/CODE_OF_CONDUCT/: index.html
0.0.9/CONTRIBUTING/: index.html
0.0.9/LICENSE/: index.html
0.0.9/search/: search_index.json
0.1.0/: 404.html  index.html  sitemap.xml
0.1.0/CHANGELOG/: index.html
0.1.0/CODE_OF_CONDUCT/: index.html
0.1.0/CONTRIBUTING/: index.html
0.1.0/LICENSE/: index.html
0.1.0/search/: search_index.json
0.1.1/: 404.html  index.html  sitemap.xml
0.1.1/CHANGELOG/: index.html
0.1.1/CODE_OF_CONDUCT/: index.html
0.1.1/CONTRIBUTING/: index.html
0.1.1/LICENSE/: index.html
0.1.1/search/: search_index.json
0.1.2/: 404.html  index.html  sitemap.xml
0.1.2/CHANGELOG/: index.html
0.1.2/CODE_OF_CONDUCT/: index.html
0.1.2/CONTRIBUTING/: index.html
0.1.2/LICENSE/: index.html
0.1.2/search/: search_index.json
0.1.3/: 404.html  index.html  sitemap.xml
0.1.3/CHANGELOG/: index.html
0.1.3/CODE_OF_CONDUCT/: index.html
0.1.3/CONTRIBUTING/: index.html
0.1.3/LICENSE/: index.html
0.1.3/search/: search_index.json
0.2.0/: 404.html  index.html  sitemap.xml
0.2.0/CHANGELOG/: index.html
0.2.0/CODE_OF_CONDUCT/: index.html
0.2.0/CONTRIBUTING/: index.html
0.2.0/LICENSE/: index.html
0.2.0/search/: search_index.json
0.2.1/: 404.html  index.html  sitemap.xml
0.2.1/CHANGELOG/: index.html
0.2.1/CODE_OF_CONDUCT/: index.html
0.2.1/CONTRIBUTING/: index.html
0.2.1/LICENSE/: index.html
0.2.1/search/: search_index.json
0.3.0/: 404.html  index.html  sitemap.xml
0.3.0/CHANGELOG/: index.html
0.3.0/CODE_OF_CONDUCT/: index.html
0.3.0/CONTRIBUTING/: index.html
0.3.0/LICENSE/: index.html
0.3.0/search/: search_index.json
0.3.1/: 404.html  index.html  sitemap.xml
0.3.1/CHANGELOG/: index.html
0.3.1/CODE_OF_CONDUCT/: index.html
0.3.1/CONTRIBUTING/: index.html
0.3.1/LICENSE/: index.html
0.3.1/search/: search_index.json
0.3.2/: 404.html  index.html  sitemap.xml
0.3.2/CHANGELOG/: index.html
0.3.2/CODE_OF_CONDUCT/: index.html
0.3.2/CONTRIBUTING/: index.html
0.3.2/LICENSE/: index.html
0.3.2/search/: search_index.json
0.3.3/: 404.html  index.html  sitemap.xml
0.3.3/CHANGELOG/: index.html
0.3.3/CODE_OF_CONDUCT/: index.html
0.3.3/CONTRIBUTING/: index.html
0.3.3/LICENSE/: index.html
0.3.3/search/: search_index.json
0.3.4/: 404.html  index.html  sitemap.xml
0.3.4/CHANGELOG/: index.html
1.0.0/: 404.html  index.html  sitemap.xml
1.0.1/: 404.html  index.html  sitemap.xml
1.0.2/: 404.html  index.html  sitemap.xml
1.1.0/: 404.html  index.html  sitemap.xml
1.1.1/: 404.html  index.html  sitemap.xml
1.2.0/: 404.html  index.html  sitemap.xml
1.3.0/: 404.html  index.html  sitemap.xml
1.4.0/: 404.html  index.html  sitemap.xml
1.5.0/: 404.html  index.html  sitemap.xml
1.5.1/: 404.html  index.html  sitemap.xml
1.5.2/: 404.html  index.html  sitemap.xml
1.5.3/: 404.html  index.html  sitemap.xml
1.5.4/: 404.html  index.html  sitemap.xml
docs/: CONTRIBUTING.md  LICENSE.md
hooks/: post_gen_project.py  pre_gen_project.py
tests/: test_bake_project.py
{{cookiecutter.project_name}}/: .all-contributorsrc  .editorconfig  .gitignore  .gitpod.Dockerfile  .gitpod.yml  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  mkdocs.yml  pyproject.toml  renovate.json  tox.ini
{{cookiecutter.project_name}}/.devcontainer/: Dockerfile
{{cookiecutter.project_name}}/.github/: FUNDING.yml  SECURITY.md  label-commenter-config.yml  labels.yml  stale.yml
{{cookiecutter.project_name}}/.github/ISSUE_TEMPLATE/: bug_report.yaml  config.yml  docs.yaml  feature_request.yaml
{{cookiecutter.project_name}}/.github/workflows/: auto-approve.yml  auto-merge.yml  cd.yml  ci.yml  codecov.yml  codeql-analysis.yml  dependency_review.yml  fossa.yml  greetings.yml  label-commenter.yml  labels.yml  license.yml  misspell.yml  preview-docs.yml  sync.yml
{{cookiecutter.project_name}}/docs/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md
{{cookiecutter.project_name}}/docs/src/: {{cookiecutter.package_name}}.md
{{cookiecutter.project_name}}/examples/: README.md
{{cookiecutter.project_name}}/licenses/: bsd-2-clause.txt  bsd-3-clause.txt  mit.txt
{{cookiecutter.project_name}}/src/{{cookiecutter.package_name}}/: __init__.py  __main__.py  {{cookiecutter.package_name}}.py
{{cookiecutter.project_name}}/src/{{cookiecutter.project_name}}/: __init__.py
{{cookiecutter.project_name}}/tests/: README.md  test_{{cookiecutter.package_name}}.py
(+73 files in other folders)
