[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "cookiecutter-pypackage"
version = "1.0.2"
description = "🐍🍪 Another Python Cookiecutter"
readme = "README.md"
authors = ["billsioros <billsioros97@gmail.com>"]
license = "MIT"
homepage = "https://billsioros.github.io/cookiecutter-pypackage"
repository = "https://github.com/billsioros/cookiecutter-pypackage"
keywords = []
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/billsioros/cookiecutter-pypackage/issues"
"Changelog" = "https://github.com/billsioros/cookiecutter-pypackage/releases"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
python-semantic-release = "*"
wemake-python-styleguide = "*"
flakeheaven = "*"
isort = "*"
pre-commit = "*"
poethepoet = "*"
pytest = "*"
pytest-sugar = "*"
pytest-clarity = "*"
mkdocs = "*"
mkdocs-material = "*"
mkdocs-minify-plugin = "*"
mkdocs-redirects = "*"
mdx-truly-sane-lists = "*"
mike = "*"
pytest-cookies = "*"
black = "*"

[tool.semantic_release]
upload_to_pypi = false
version_toml = "pyproject.toml:tool.poetry.version"
changelog_components = "semantic_release.changelog.changelog_headers,semantic_release.changelog.compare_url"
build_command = false

[tool.poe.tasks]
clean = { cmd = "rm -rf ./**/__pycache__ dist site .pytest_cache", help = "Clean up any auxiliary files" }
format = { shell = "poetry run isort .; poetry run black .", help = "Format your codebase" }
hooks = { cmd = "poetry run pre-commit run --all-files", help = "Run all pre-commit hooks" }
test = { cmd = "poetry run pytest --cov=cookiecutter-pypackage", help = "Run the test suite" }
lint = { cmd = "poetry run flakeheaven lint", help = "Lint your code for errors" }
docs = { shell = "python -c 'import webbrowser; webbrowser.open(\"http://127.0.0.1:8000\")'; poetry run mkdocs serve", help = "Build and serve the documentation" }
export = { cmd = "poetry export --without-hashes --dev -o requirements.txt" }

[tool.pytest.ini_options]
addopts = "-vv --color=yes"
log_cli = false
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
log_cli_format = "%(asctime)s %(levelname)s %(message)s"
log_cli_level = "INFO"
python_files = "test_*.py"
python_functions = "test_*"
testpaths = "tests"

[tool.isort]
profile = "black"
src_paths = ["cookiecutter-pypackage", "hooks", "tests"]
line_length = 99

[tool.black]
line-length = 99
target-version = ["py37", "py38"]
skip-string-normalization = true
exclude = "{{cookiecutter.project_name}}"

[tool.flakeheaven]
exclude = [
  ".git",
  ".github",
  ".pytest_cache",
  ".vscode",
  ".venv",
  "docs",
  "__pycache__",
  "README.md",
  "{{cookiecutter.project_name}}"
]
format = "colored"
show_source = false
statistics = false
docstring-convention = "google"

accept_encodings = "utf-8"
max_line_length = 99

extended_default_ignore = []

[tool.flakeheaven.plugins]
"flake8-*" = ["+*"]
mccabe = ["+*"]
"pep8-naming" = ["+*"]
pycodestyle = ["+*"]
pyflakes = ["+*"]
"wemake-python-styleguide" = ["+*"]
