[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "{{cookiecutter.project_name}}"
version = "{{cookiecutter.version}}"
description = "{{cookiecutter.project_description}}"
readme = "README.md"
authors = ["{{cookiecutter.author}} <{{cookiecutter.email}}>"]
license = "{{cookiecutter.license}}"
homepage = "https://{{cookiecutter.github_user}}.github.io/{{cookiecutter.project_name}}"
repository = "https://github.com/{{cookiecutter.github_user}}/{{cookiecutter.project_name}}"
keywords = []
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/{{cookiecutter.github_user}}/{{cookiecutter.project_name}}/issues"
"Changelog" = "https://github.com/{{cookiecutter.github_user}}/{{cookiecutter.project_name}}/releases"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
python-semantic-release = "^7.15.3"
flake8 = "^3.9.2"
flakehell = "^0.9.0"
wemake-python-styleguide = "^0.15.2"
isort = "^5.9.3"
mypy = "^0.910"
black = "^20.8b1"
pre-commit = "^2.12.1"
poethepoet = "^0.10.0"
coverage = {extras = ["toml"], version = "^5.5"}
pytest = "^6.2.4"
pytest-cov = "^2.12.1"
pytest-sugar = "^0.9.4"
pytest-clarity = "^1.0.1"
tox = "^3.23.0"
tox-poetry-installer = { extras = ["poetry"], version = "^0.8.0" }
tox-gh-actions = "^2.5.0"
tox-pyenv = "^1.1.0"
mkdocs = "^1.1.2"
mkdocs-material = "^7.1.3"
mkdocs-minify-plugin = "^0.4.0"
mkdocs-redirects = "^1.0.3"
mkdocstrings = "^0.15.0"
mdx-truly-sane-lists = "^1.2"
mike = "^1.0.1"

[tool.semantic_release]
version_toml = "pyproject.toml:tool.poetry.version"
changelog_components = "semantic_release.changelog.changelog_headers,semantic_release.changelog.compare_url"
build_command = "python -m pip install poetry && poetry build"

[tool.vulture]
min_confidence = 95
paths = ["src/{{cookiecutter.package_name}}", "tests"]

[tool.poe.tasks]
clean = { cmd = "rm -rf ./**/__pycache__ dist site .pytest_cache .mypy_cache .coverage", help = "Clean up any auxiliary files" }
format = { shell = "poetry run isort .; poetry run black .", help = "Format your codebase" }
hooks = { cmd = "poetry run pre-commit run --all-files", help = "Run all pre-commit hooks" }
test = { cmd = "poetry run pytest --cov={{cookiecutter.package_name}}", help = "Run the test suite and produce a coverage report" }
type-check = { cmd = "poetry run mypy", help = "Run static type checking on your codebase" }
lint = { cmd = "poetry run flakehell lint", help = "Lint your code for errors" }
docs = { shell = "python -c 'import webbrowser; webbrowser.open(\"http://127.0.0.1:8000\")'; poetry run mkdocs serve", help = "Build and serve the documentation" }

[tool.pytest.ini_options]
addopts = "-vv --color=yes"
log_cli = false
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
log_cli_format = "%(asctime)s %(levelname)s %(message)s"
log_cli_level = "INFO"
python_files = "test_*.py"
python_functions = "test_*"
testpaths = "tests"

[tool.coverage.paths]
source = ["src/{{cookiecutter.package_name}}"]

[tool.coverage.run]
branch = true
source = ["src/{{cookiecutter.package_name}}"]

[tool.coverage.report]
show_missing = true
fail_under = 100
exclude_lines = ["if self.debug:", "pragma: no cover", "raise NotImplementedError", "if __name__ == .__main__.:"]
ignore_errors = true
omit = ["tests/*"]

[tool.isort]
profile = "black"
src_paths = ["src/{{cookiecutter.package_name}}", "tests"]
line_length = 99
known_first_party = "{{cookiecutter.package_name}}"

[tool.black]
line-length = 99
target-version = ["py37", "py38"]

[tool.mypy]
files = ["src/{{cookiecutter.package_name}}"]
warn_unused_configs = true
warn_return_any = true
ignore_missing_imports = true
pretty = true
color_output = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
strict = true

[tool.flakehell]
exclude = [
  ".git",
  ".github",
  ".mypy_cache",
  ".pytest_cache",
  ".tox",
  ".vscode",
  ".venv",
  "build",
  "dist",
  "docs",
  "tests",
  "__pycache__",
  "README.md"
]
format = "colored"
show_source = false
statistics = false
docstring-convention = "google"

accept_encodings = "utf-8"
max_line_length = 99

extended_default_ignore = []

[tool.flakehell.plugins]
"flake8-*" = ["+*"]
mccabe = ["+*"]
nitpick = ["+*"]
"pep8-naming" = ["+*"]
pycodestyle = ["+*"]
pyflakes = ["+*"]
"wemake-python-styleguide" = ["+*"]
